--- a/product/css/index.css
+++ b/product/css/index.css
@@ -37,10 +37,6 @@ body {
 img {
   border: 0;
 }
-ul {
-  margin: 0;
-  padding: 0;
-}
 ul li {
   list-style: none;
 }
@@ -108,6 +104,7 @@ header .header_main .header_search .search {
   width: 16rem;
   height: 1.4rem;
   border: 1px solid #ccc;
+  border-radius: 0.5rem;
   background: #fff;
   color: #666;
   font-size: 0.7rem;
@@ -271,6 +268,15 @@ header .header_main .header_member a {
 #main .main_left .content h3 {
   color: #369;
 }
+#main .main_left .content .load_more {
+  width: 99%;
+  margin: 0.5rem 0 0 0;
+}
+#main .main_left .content .load_more .ui-button-text {
+  height: 1.5rem;
+  line-height: 1.5rem;
+  padding: 0;
+}
 #main .main_left .content .editor {
   color: #333;
   line-height: 180%;
@@ -291,6 +297,49 @@ header .header_main .header_member a {
   margin-top: 1rem;
   position: relative;
   margin-bottom: 1rem;
+}
+#main .main_left .content .bottom .comment {
+  color: #369;
+  cursor: pointer;
+}
+#main .main_left .content .bottom .comment_list {
+  display: none;
+  border-radius: 0.2rem;
+  border: 1px solid #ccc;
+  min-height: 1.25rem;
+  padding: 0.25rem 0.5rem;
+}
+#main .main_left .content .bottom .comment_list dl {
+  padding: 0.15rem 0.5rem 0.25rem 0;
+}
+#main .main_left .content .bottom .comment_list dl dt {
+  padding: 0.25rem 0 0 0;
+  color: #369;
+}
+#main .main_left .content .bottom .comment_list dl dd {
+  color: #333;
+  line-height: 180%;
+}
+#main .main_left .content .bottom .comment_list dl dd.date {
+  color: #999;
+  border-bottom: 1px solid #ccc;
+}
+#main .main_left .content .bottom .comment_add {
+  text-align: right;
+  border: none;
+}
+#main .main_left .content .bottom .comment_add textarea {
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 0.25rem;
+  background: #fff;
+  padding: 0.25rem;
+  font-size: 0.8rem;
+  color: #666;
+  resize: none;
+}
+#main .main_left .content .bottom .comment_add input {
+  cursor: pointer;
 }
 #main .main_left .content hr {
   color: #ccc;
@@ -331,4 +380,9 @@ header .header_main .header_member a {
 }
 #edui1 {
   width: 47rem;
+}
+#footer {
+  clear: both;
+  color: #666;
+  text-align: center;
 }
